--- a/index.html
+++ b/index.html
@@ -1138,23 +1138,23 @@
 
   <!-- Full Package -->
   <div class="card highlighted">
-    <h3 class="space-y-2">Повний набір</h3>
+    <h3 class="space-y-2">Повний набір 499 грн.</h3>
     <p class="text-primary">30 днів</p>
-    <p>Твій психологічний щоденник підтримки на місяць. Історії + афірмації + питання для роздумів. Доступ відкривається після оплати.</p>
+    <p>Твій психологічний щоденник підтримки на місяць. Посібник, електронна книга, файл формату .pdf. Доступ відкривається після оплати.</p>
     <button class="btn w-full" onclick="document.getElementById('paymentModal').style.display='block'">Придбати повний набір</button>
   </div>
 
   <!-- Pro Package -->
   <div class="card">
-    <h3 class="space-y-2">Професійний пакет</h3>
-    <p>Для психологів та коучів. AI-анімації, адаптація для болів. Умови співпраці та ціни обговорюються індивідуально.</p>
+    <h3 class="space-y-2">Професійний пакет від 999 грн.</h3>
+    <p>Для психологів та коучів. Послуга створення авторського AI контенту, психологічної тематики. Умови співпраці та ціни обговорюються індивідуально.</p>
     <button class="btn w-full">Хочу як практик</button>
   </div>
 
   <!-- ART Individual -->
   <div class="card">
-    <h3 class="space-y-2">АРТ пелюстка індивідуальна</h3>
-    <p>Персоналізована, створена тобою. Акрил, вживу в Києві. Це не сеанс психотерапії — це вечір з фарбою. Ціна обговорюється.</p>
+    <h3 class="space-y-2">АРТ пелюстка індивідуальна від 499 грн.</h3>
+    <p>Персоналізована, створена тобою. Сеанс арте терапії, майстер клас, малювання акриловими фарбами, вживу в Києві. Це не сеанс психотерапії — це вечір з фарбою. Ціна обговорюється.</p>
     <button class="btn w-full">Дай знати</button>
   </div>
 </div>
