--- a/ua/index.html
+++ b/ua/index.html
@@ -71,7 +71,7 @@
         </video>
 <!-- Напівпрозорий градієнт для кращої читабельності тексту -->
       <div class="absolute inset-0 bg-gradient-to-r from-white/80 via-white/60 to-transparent"></div>
-          <div class="relative z-10 container mx-auto px-6 pt-96">
+          <div class="relative z-10 container mx-auto px-6" style="padding-top: 28 rem;">
         <div class="max-w-2xl">
           <h2 class="text-5xl md:text-6xl font-bold text-gray-800 mb-6 leading-tight">
             Коли&nbsp;емоції<span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-600"> занадто сильні</span> для слів
