--- a/ua/index.html
+++ b/ua/index.html
@@ -63,26 +63,27 @@
     <!-- Зменшили висоту героя та додали паралакс-ефект -->
     <section class="relative py-40 flex items-center justify-center overflow-hidden">
       <!-- Фонове зображення — та сама абстрактна квітка, що й на англійській версії -->
-      <div hidden class="absolute inset-0 bg-cover bg-center bg-no-repeat parallax" style="background-image: url('https://readdy.ai/api/search-image?query=Beautiful%20abstract%20watercolor%20painting%20of%20delicate%20flower%20petals%20in%20soft%20pink%20purple%20and%20blue%20tones%20floating%20gracefully%20with%20gentle%20light%20and%20ethereal%20atmosphere%2C%20dreamy%20artistic%20background%20perfect%20for%20emotional%20healing%20and%20therapy%2C%20soft%20pastel%20colors%20blending%20harmoniously%2C%20peaceful%20and%20calming%20visual%20representation%20of%20emotions%20as%20flower%20petals&width=1920&height=1080&se
-        q=hero-bg&orientation=landscape');"></div>
-  
-              <video autoplay loop muted playsinline poster="hero-bg.png" class="absolute inset-0 w-full h-full object-cover">
-          <source src="header-video.mp4" type="video/mp4">
-        </video>
-<!-- Напівпрозорий градієнт для кращої читабельності тексту -->
-      <div class="absolute inset-0 bg-gradient-to-r from-white/80 via-white/60 to-transparent"></div>
-          <div class="relative z-10 container mx-auto px-6" style="padding-top: 28 rem;">
-        <div class="max-w-2xl">
-          <h2 class="text-5xl md:text-6xl font-bold text-gray-800 mb-6 leading-tight">
-            Коли&nbsp;емоції<span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-600"> занадто сильні</span> для слів
-          </h2>
-          <p class="text-xl text-gray-600 mb-8 leading-relaxed">Дозвольте кольору говорити за вас&nbsp;— створіть простір для ваших відчуттів і знайдіть шлях до спокою.</p>
-          <div class="flex flex-col sm:flex-row gap-4">
-            <a href="#signup" class="bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:shadow-xl transition-all whitespace-nowrap cursor-pointer">Записатися</a>
-            <a href="#states" class="border-2 border-purple-300 text-purple-700 px-8 py-4 rounded-full text-lg font-semibold hover:bg-purple-50 transition-all whitespace-nowrap cursor-pointer">Завантажити збірку</a>
-          </div>
-        </div>
-      </div>
+     <!-- Новий блок із текстом та кнопками під відео -->
+<section class="py-20 bg-white">
+  <div class="container mx-auto px-6 text-center">
+    <h2 class="text-5xl md:text-6xl font-bold text-gray-800 mb-6 leading-tight">
+      Коли&nbsp;емоції<span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-600"> занадто сильні</span> для слів
+    </h2>
+    <p class="text-xl text-gray-600 mb-8 leading-relaxed">
+      Дозвольте кольору говорити за вас&nbsp;— створіть простір для ваших відчуттів і знайдіть шлях до спокою.
+    </p>
+    <div class="flex flex-col sm:flex-row justify-center gap-4">
+      <a href="#signup"
+         class="bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:shadow-xl transition-all whitespace-nowrap cursor-pointer">
+        Записатися
+      </a>
+      <a href="#states"
+         class="border-2 border-purple-300 text-purple-700 px-8 py-4 rounded-full text-lg font-semibold hover:bg-purple-50 transition-all whitespace-nowrap cursor-pointer">
+        Завантажити збірку
+      </a>
+    </div>
+  </div>
+</section>
     </section>
 
     <!-- Блок "Про мене" -->
